# evonove.it

./: .dockerignore  .env.docker  .env.local  .gitattributes  .gitignore  .travis.yml  AUTHORS  Dockerfile  LICENSE  Makefile  README.md  README.rst  docker-compose.yml  docker-services.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  runtests.py  tox.ini  uwsgi.ini
.circleci/: config.yml
containers/: Dockerfile  Dockerfile.docs  Dockerfile.production  base.yml  services.yml  start.sh  test.yml
deploy/: Dockerfile
django-website/: conftest.py  manage.py
django-website/agency/: models.py
django-website/agency/migrations/: 0001_initial.py  0002_teammember.py  0003_auto_20170726_0914.py  0004_auto_20170726_0915.py  0005_auto_20170727_1324.py  0006_auto_20170727_1346.py  0007_agencypage_linked_data.py  0007_auto_20170731_1134.py  0008_auto_20170801_0717.py  0008_merge_20170801_1309.py  0009_merge_20170801_1329.py  0010_agencypage_services_contact.py  0011_agencypage_stack_description.py  0012_auto_20170828_0935.py  0013_alter_agencypage_linked_data.py
django-website/blog/: fields.py  models.py
django-website/blog/migrations/: 0001_initial.py  0002_auto_20160509_1533.py  0002_create_blog_index.py  0003_auto_20170310_1113.py  0004_auto_20170803_0905.py  0004_blogpage_blog_subtitle.py  0005_merge_20170803_0931.py  0006_alter_post_body.py  0007_alter_posttag_tag.py
django-website/blog/templatetags/: blog_tags.py
django-website/blog/tests/: test_blog_page.py
django-website/contacts/: models.py
django-website/contacts/migrations/: 0001_initial.py  0002_contactspage_job_email.py  0003_auto_20170727_1348.py  0004_contactspage_linked_data.py  0005_alter_contactspage_linked_data.py
django-website/core/: models.py
django-website/frontend/: .eslintrc  .gitignore  package.json  webpack.config.js
django-website/frontend/static/: index.css  index.css.map
django-website/hiring/: apps.py  models.py
django-website/hiring/migrations/: 0001_initial.py  0002_auto_20170310_1113.py  0003_auto_20170726_1058.py  0004_auto_20170727_1324.py  0005_auto_20170804_0801.py  0006_hiringpage_outro.py  0007_alter_hiringpage_linked_data.py
django-website/home/: models.py
django-website/home/migrations/: 0001_initial.py  0002_create_homepage.py  0003_auto_20160129_1137.py  0003_service.py  0004_auto_20160511_0845.py  0004_work.py  0005_auto_20160512_0713.py  0005_teammember.py  0006_work_customer.py  0007_auto_20160616_1401.py  0008_work_link.py  (+5 more)
django-website/options/: models.py
django-website/pages/: models.py
django-website/portfolio/: models.py
django-website/robots/: views.py
django-website/templates/: 404.html  500.html  base.html  blog_base.html  robots.txt  user_sitemap.html
django-website/user_sitemap/: apps.py  views.py
django-website/website/: settings.py  urls.py  wsgi.py
django-website/wheelie/: apps.py  bower.json  gulpfile.js  package.json
docs/: deployment.md  index.md
requirements/: requirements-dev.in  requirements.in  requirements.txt
website/blog/: models.py
website/wheelie/: bower.json  gulpfile.js  package.json
(+211 files in other folders)
