[tool.poetry]
name = "evonove.it"
version = "3.6.4"
description = ""
authors = ["Evoniners <dev@evonove.it>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-getenv = "^1.3.2"
django-redis = "^5.4.0"
dj-database-url = "^2.1.0"
psycopg = { extras = ["binary"], version = "^3.1.12" }
whitenoise = "^6.6.0"
wagtail = "^5.2"
Pygments = "^2.16.1"
uWSGI = "^2.0.23"
django-s3-storage = "^0.15.0"
raven = "6.10.0"
google-cloud-logging = "^3.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-django = "^4.7.0"
pytest-xdist = "^3.3.1"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = [
  "E",   # pycodestyle
  "W",   # pycodestyle warnings
  "C90", # mccabe
  "B",   # bugbear
  "I",   # isort
  "F",   # pyflakes
  "UP",  # pyupgrade
]
exclude = ["migrations", "node_modules"]
