[project]
name = "evonove.it"
version = "3.6.4"
description = ""
authors = [{ name = "Evoniners", email = "dev@evonove.it" }]
requires-python = "~=3.11"
dependencies = [
    "django>=4.2.7,<5",
    "django-getenv>=1.3.2,<2",
    "django-redis>=5.4.0,<6",
    "dj-database-url>=2.1.0,<3",
    "psycopg[binary]>=3.1.12,<4",
    "whitenoise>=6.6.0,<7",
    "wagtail~=5.2",
    "Pygments>=2.16.1,<3",
    "uWSGI>=2.0.23,<3",
    "django-s3-storage>=0.15.0,<0.16",
    "raven==6.10.0",
    "google-cloud-logging>=3.8.0,<4",
]

[dependency-groups]
dev = [
    "ruff>=0.1.4,<0.2",
    "pytest>=7.4.3,<8",
    "pytest-cov>=4.1.0,<5",
    "pytest-django>=4.7.0,<5",
    "pytest-xdist>=3.3.1,<4",
    "coverage>=7.3.2,<8",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
lint.select = [
  "E",   # pycodestyle
  "W",   # pycodestyle warnings
  "C90", # mccabe
  "B",   # bugbear
  "I",   # isort
  "F",   # pyflakes
  "UP",  # pyupgrade
]
exclude = ["migrations", "node_modules"]
