[project]
name = "evonove.it"
version = "3.7.0"
description = "Evonove website"
authors = [{ name = "Evoniners", email = "dev@evonove.it" }]
requires-python = "~=3.13"
dependencies = [
    "django>=5.1,<5.2",
    "django-getenv>=1.3.2,<2",
    "django-redis>=5.4.0,<6",
    "dj-database-url>=2.1.0,<3",
    "psycopg[binary]>=3.1.12,<4",
    "whitenoise>=6.6.0,<7",
    "wagtail~=6.4.1",
    "Pygments>=2.16.1,<3",
    "uWSGI>=2.0.23,<3",
    "django-s3-storage>=0.15.0,<0.16",
    "raven==6.10.0",
    "google-cloud-logging>=3.8.0,<4",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
lint.select = [
  "E",   # pycodestyle
  "W",   # pycodestyle warnings
  "C90", # mccabe
  "B",   # bugbear
  "I",   # isort
  "F",   # pyflakes
  "UP",  # pyupgrade
]
exclude = ["migrations", "node_modules"]
